force-app/main/default/objects/Leadspace_Campaign_Mappings__c/Leadspace_Campaign_Mappings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping of Leadspace Lead&apos;s Lead Origin values and Campaign Ids.
It will be used to set Lead&apos;s campaign based on Leadspace profiles the lead is coming from. 
The Lead Origin field will be set by Leadspace based on the profile is is selected from. Based on the Lead Origin, the lead trigger will add the lead as Campaign Member in the mapped Campaign.</description>
    <label>Leadspace : Campaign Mappings</label>
</CustomObject>