force-app/main/default/objects/Leadspace_Campaign_Mappings__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <description>18 character SFDC Id of the Campaign record.</description>
    <inlineHelpText>18 character SFDC Id of the Campaign record.</inlineHelpText>
    <label>CampaignId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>