force-app/main/default/objects/Leadspace_Campaign_Mappings__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the Mapping is active and be considered in adding the lead to the Campaign</description>
    <inlineHelpText>Check if the Mapping is active and be considered in adding the lead to the Campaign</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>