force-app/main/default/objects/Leadspace_Campaign_Mappings__c/fields/Lead_Origin__c.field-meta.xml
<CustomField>
    <fullName>Lead_Origin__c</fullName>
    <description>Lead Origin is set based on the Leadspace profile from which the Lead is selected.
eg., For all leads coming from DGX Profile, their Lead_Origin__c field is set to &quot;Tesla_LS_Deep Learning Profile_Prospecting_NALA_2016_July&quot;</description>
    <inlineHelpText>Lead Origin is set based on the Leadspace profile from which the Lead is selected.
eg., For all leads coming from DGX Profile, their Lead_Origin__c field is set to &quot;Tesla_LS_Deep Learning Profile_Prospecting_NALA_2016_July&quot;</inlineHelpText>
    <label>Lead Origin</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>