force-app/main/default/objects/Leadspace_Campaign_Mappings__c/fields/LeadSource__c.field-meta.xml
<CustomField>
    <fullName>LeadSource__c</fullName>
    <description>LeadSource - Leadspace in case of lead is coming from Leadspace prospecting tool</description>
    <inlineHelpText>LeadSource - Leadspace in case of lead is coming from Leadspace prospecting tool</inlineHelpText>
    <label>LeadSource</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>