force-app/main/default/objects/Leadspace_Campaign_Mappings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LeadSource__c</columns>
    <columns>Lead_Origin__c</columns>
    <columns>CampaignId__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>